--- a/deskDetails.html
+++ b/deskDetails.html
@@ -122,7 +122,7 @@
                 <div class="btBody -mx-5">
                   <div class="card-body p-0">
                     <div class="table4">
-                      <div class="table-responsive">
+                      <div class="table-responssive">
                         <table class="table table-bordered table-social">
                           <thead class="">
                             <tr class="userDatatable-headers bg-white">
@@ -151,9 +151,32 @@
                           <tbody>
                             <tr class="">
                               <td class="w-12">
-                                <i
-                                  class="uil uil-pen text-primary font-bold text-base md:text-2xl"
-                                ></i>
+                                <div class="dropdown dropdown-click">
+                                  <a
+                                    href=""
+                                    data-bs-toggle="dropdown"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                  >
+                                    <i
+                                      class="uil uil-pen text-primary font-bold text-base md:text-2xl"
+                                    ></i>
+                                  </a>
+
+                                  <div
+                                    class="dropdown-default dropdown-bottomRight dropdown-menu"
+                                  >
+                                    <a class="dropdown-item" href="#"
+                                      >Item One</a
+                                    >
+                                    <a class="dropdown-item" href="#"
+                                      >Item Two</a
+                                    >
+                                    <a class="dropdown-item" href="#"
+                                      >Item Three</a
+                                    >
+                                  </div>
+                                </div>
                               </td>
                               <td class="text-left w-1/2">
                                 <div
@@ -186,9 +209,32 @@
                             </tr>
                             <tr class="">
                               <td class="w-12">
-                                <i
-                                  class="uil uil-pen text-primary font-bold text-base md:text-2xl"
-                                ></i>
+                                <div class="dropdown dropdown-click">
+                                  <a
+                                    href=""
+                                    data-bs-toggle="dropdown"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                  >
+                                    <i
+                                      class="uil uil-pen text-primary font-bold text-base md:text-2xl"
+                                    ></i>
+                                  </a>
+
+                                  <div
+                                    class="dropdown-default dropdown-bottomRight dropdown-menu"
+                                  >
+                                    <a class="dropdown-item" href="#"
+                                      >Item One</a
+                                    >
+                                    <a class="dropdown-item" href="#"
+                                      >Item Two</a
+                                    >
+                                    <a class="dropdown-item" href="#"
+                                      >Item Three</a
+                                    >
+                                  </div>
+                                </div>
                               </td>
                               <td class="text-left w-1/2">
                                 <div
@@ -221,9 +267,32 @@
                             </tr>
                             <tr class="">
                               <td class="w-12">
-                                <i
-                                  class="uil uil-pen text-primary font-bold text-base md:text-2xl"
-                                ></i>
+                                <div class="dropdown dropdown-click">
+                                  <a
+                                    href=""
+                                    data-bs-toggle="dropdown"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                  >
+                                    <i
+                                      class="uil uil-pen text-primary font-bold text-base md:text-2xl"
+                                    ></i>
+                                  </a>
+
+                                  <div
+                                    class="dropdown-default dropdown-bottomRight dropdown-menu"
+                                  >
+                                    <a class="dropdown-item" href="#"
+                                      >Item One</a
+                                    >
+                                    <a class="dropdown-item" href="#"
+                                      >Item Two</a
+                                    >
+                                    <a class="dropdown-item" href="#"
+                                      >Item Three</a
+                                    >
+                                  </div>
+                                </div>
                               </td>
                               <td class="text-left w-1/2">
                                 <div
@@ -256,9 +325,32 @@
                             </tr>
                             <tr class="">
                               <td class="w-12">
-                                <i
-                                  class="uil uil-pen text-primary font-bold text-base md:text-2xl"
-                                ></i>
+                                <div class="dropdown dropdown-click">
+                                  <a
+                                    href=""
+                                    data-bs-toggle="dropdown"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                  >
+                                    <i
+                                      class="uil uil-pen text-primary font-bold text-base md:text-2xl"
+                                    ></i>
+                                  </a>
+
+                                  <div
+                                    class="dropdown-default dropdown-bottomRight dropdown-menu"
+                                  >
+                                    <a class="dropdown-item" href="#"
+                                      >Item One</a
+                                    >
+                                    <a class="dropdown-item" href="#"
+                                      >Item Two</a
+                                    >
+                                    <a class="dropdown-item" href="#"
+                                      >Item Three</a
+                                    >
+                                  </div>
+                                </div>
                               </td>
                               <td class="text-left w-1/2">
                                 <div
@@ -291,9 +383,32 @@
                             </tr>
                             <tr class="">
                               <td class="w-12">
-                                <i
-                                  class="uil uil-pen text-primary font-bold text-base md:text-2xl"
-                                ></i>
+                                <div class="dropdown dropdown-click">
+                                  <a
+                                    href=""
+                                    data-bs-toggle="dropdown"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                  >
+                                    <i
+                                      class="uil uil-pen text-primary font-bold text-base md:text-2xl"
+                                    ></i>
+                                  </a>
+
+                                  <div
+                                    class="dropdown-default dropdown-bottomRight dropdown-menu"
+                                  >
+                                    <a class="dropdown-item" href="#"
+                                      >Item One</a
+                                    >
+                                    <a class="dropdown-item" href="#"
+                                      >Item Two</a
+                                    >
+                                    <a class="dropdown-item" href="#"
+                                      >Item Three</a
+                                    >
+                                  </div>
+                                </div>
                               </td>
                               <td class="text-left w-1/2">
                                 <div
@@ -381,11 +496,38 @@
                     >
                       Exit
                     </button>
-                    <button
-                      class="dtOperations btn bg-primary font-medium text-xl text-white rounded-3xl px-6 py-1"
-                    >
-                      Operations
-                    </button>
+
+                    <div class="dropdown dropdown-click">
+                      <a
+                        class="dtOperations btn bg-primary font-medium text-xl text-white rounded-3xl px-6 py-1"
+                        href=""
+                        data-bs-toggle="dropdown"
+                        aria-haspopup="true"
+                        aria-expanded="false"
+                      >
+                        Operations
+                      </a>
+
+                      <div
+                        class="dropdown-default dropdown-bottomRight dropdown-menu text-black bg-white"
+                      >
+                        <a class="dropdown-item text-black" href="#"
+                          >Add Product</a
+                        >
+                        <a class="dropdown-item text-black" href="#"
+                          >Move Desk</a
+                        >
+                        <a class="dropdown-item text-black" href="#"
+                          >Desk Merge</a
+                        >
+                        <a class="dropdown-item text-black" href="#"
+                          >Move Product</a
+                        >
+                        <a class="dropdown-item text-black" href="#"
+                          >Desk History</a
+                        >
+                      </div>
+                    </div>
                   </div>
                   <div
                     class="dtTotal btn bg-[#ECD9EC] border border-primary text-black font-medium text-xl rounded-xl px-6 py-1"
@@ -430,6 +572,8 @@
 
     <script src="assets/vendor_assets/js/jquery/jquery-3.5.1.min.js"></script>
     <script src="assets/vendor_assets/js/jquery/jquery-ui.js"></script>
+    <script src="assets/vendor_assets/js/bootstrap/bootstrap.min.js"></script>
+    <script src="assets/vendor_assets/js/bootstrap/popper.js"></script>
 
     <script src="assets/theme_assets/js/main.js"></script>
     <!-- endinject-->
