--- a/desklist.html
+++ b/desklist.html
@@ -201,11 +201,40 @@
                           >
                             12,000
                           </div>
-                          <button
-                            class="absolute right-2 bg-primary text-white font-semibold md:w-12 md:h-12 w-7 h-7 rounded-full bottom-[-18px]"
+
+                          <div
+                            class="dropdown dropdown-click absolute bottom-[-18px] right-2 z-[99999]"
                           >
-                            <i class="uil uil-pen text-xl font-extrabold"></i>
-                          </button>
+                            <a
+                              class="btn bg-primary font-medium text-xl text-white px-6 py-1 md:w-12 md:h-12 w-7 h-7 rounded-full"
+                              href=""
+                              data-bs-toggle="dropdown"
+                              aria-haspopup="true"
+                              aria-expanded="false"
+                            >
+                              <i class="uil uil-pen text-xl font-extrabold"></i>
+                            </a>
+
+                            <div
+                              class="dropdown-default dropdown-bottomRight dropdown-menu text-black bg-white z-[99999]"
+                            >
+                              <a class="dropdown-item text-black" href="#"
+                                >Add Product</a
+                              >
+                              <a class="dropdown-item text-black" href="#"
+                                >Move Desk</a
+                              >
+                              <a class="dropdown-item text-black" href="#"
+                                >Desk Merge</a
+                              >
+                              <a class="dropdown-item text-black" href="#"
+                                >Move Product</a
+                              >
+                              <a class="dropdown-item text-black" href="#"
+                                >Desk History</a
+                              >
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -387,7 +416,7 @@
                           <div
                             class="table-name text-3xl md:text-5xl text-center text-blackish font-medium pb-1 md:pb-3"
                           >
-                            M1
+                            asad
                           </div>
                           <div
                             class="customerName md:px-6 font-medium text-center bg-greenish rounded-xl p-2 md:py-4 text-white text-lg md:text-2xl"
