--- a/desklist.html
+++ b/desklist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HexaDash</title>
+    <title>Dinner</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap"
@@ -537,6 +537,7 @@
                 </div>
                 <!-- ends: .Footer Menu -->
               </div>
+              p
             </div>
           </div>
         </div>
