--- a/deskDetails.html
+++ b/deskDetails.html
@@ -540,7 +540,7 @@
           </div>
         </div>
       </div>
-      <footer class="footer-wrapper ps-0">
+      <!-- <footer class="footer-wrapper ps-0">
         <div class="footer-wrapper__inside">
           <div class="container-fluid">
             <div class="row">
@@ -555,7 +555,7 @@
             </div>
           </div>
         </div>
-      </footer>
+      </footer> -->
     </main>
     <!-- <div id="overlayer">
       <div class="loader-overlay">
